# IconForge

./: .gitignore  AGENT.md  DEVELOPMENT_PLAN.md  Dockerfile  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: forge.py  materials.py
app/core/: __init__.py  config.py  deps.py  logging.py  security.py
app/models/: __init__.py  responses.py
app/services/: __init__.py  image_processing.py  pack_ico.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: apiError.test.tsx  editorPage.test.tsx  pixelBoard.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: PixelBoard.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/lib/: pixel-export.ts  use-editor-store.ts
frontend/src/pages/: EditorPage.tsx
tests/: test_error_handling.py  test_forge_endpoint.py  test_image_processing.py  test_material_endpoints.py  test_pack_ico.py
